# polaris

./: .gitignore  .replit  BACKEND_RESTART.md  BACKEND_SETUP.md  COMPLETE_GUIDE.md  COMPLETE_RESTART_GUIDE.md  COMPLETION_SUMMARY.md  CONNECTION_GUIDE.md  CONNECTION_SETUP.md  DEPLOYMENT_READY.md  FIX_FRONTEND_NOT_SHOWING.md  FRONTEND_BACKEND_CONNECTION.md  HOW_TO_USE.md  PDF_FIX.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  QUICK_START_NOW.md  QUICK_START_VSCODE.md  README.md  RESTART_WATCHER.md  RUNNING_STATUS.md  RUN_FROM_VSCODE.md  RUN_MANUALLY.sh  SETUP_GUIDE.md  SIMPLE_STEPS.md  START_BOTH.md  START_BOTH_SERVERS.md  START_CODING_NOW.md  STATUS.md  TEST_NOW.md  VS_CODE_INTEGRATION.md  VS_CODE_INTEGRATION_GUIDE.md  VS_CODE_SETUP.md  WATCH_ANY_FOLDER.md  WHERE_TO_CODE.md  design_guidelines.md  install.bat  install_deps.bat  keep_backend_alive.sh  kill_port_5000.bat  (+18 more)
attached_assets/: Pasted-You-are-an-expert-AI-systems-developer-Build-a-full-stack-intelligent-AGENT-called-Personal-Lea-1762572712532_1762572712533.txt  Pasted-backend-main-py-routes-stream-py-insights-py-recommendations-py--1762573674394_1762573674396.txt
client/: index.html
client/src/: App.tsx  index.css
local_watcher/: QUICK_START.txt  README.md  SETUP_INSTRUCTIONS.md  config.example.json  config.json  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  watcher.py
python_backend/: .env.example  ENV_SETUP.md  README.md  RESET_LIMIT.md  main.py  reset_rate_limit.py  run_backend.py  simple_backend.py  verify_env.py
python_backend/routes/: quiz.py  (+5 more)
server/: index.ts  routes.ts
shared/: schema.ts
(+29 files in other folders)
